@@ -1,3 +1,11 @@
+2002-09-19  Christopher Faylor  <cgf@redhat.com>
+
+	Cleanup calls to CreateFile throughout.
+	* dcrt0.cc (__api_fatal): Correctly check for failing return from CreateFile.
+	* assert.cc (__assert): Don't check return value from CreateFile for NULL.
+	* fhandler_console.cc (set_console_state_for_spawn): Ditto.
+	* fork.cc (fork_parent): Ditto.
+
 2002-09-18  Christopher Faylor  <cgf@redhat.com>
 
 	* cygthread.cc (cygthread::initialized): Avoid copying on fork or some
